# Servermint

./: ANDROID_SETUP.md  LICENSE  README.md  RELEASE_GUIDE.md  SPLASH_SCREEN.md  UPDATER_SETUP.md  agent-config.toml  build-and-sign.bat  build-with-signing.bat  build-with-signing.ps1  generate-signatures.bat  local-update-server.js  nginx-config.txt  package-lock.json  package.json  read.md  set-signing-key.bat  set-signing-key.ps1  setup-android.bat  setup-updater.bat  temp-download.exe.sig  test-update.bat  tsconfig.json  updates.json  vue.config.js
public/: index.html
relay-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json  server.js
scripts/: build-agent.sh  fix-signature.js  install-agent.sh  install-rust-agent.sh  install-sshpass.ps1  update-release.js
src/: App.vue  main.js  store.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/agent/: Cargo.toml  main.rs  test-config.toml
src-tauri/agent/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/src/: egg.rs  export.rs  lib.rs  modpack.rs  node.rs  server.rs  setup.rs  sftp.rs  websocket.rs
src-tauri/src/eggs/: fabric.sh  paper.sh  pocketmine.sh  vanilla.sh
src/components/: BackupsView.vue  ConfirmDialog.vue  CreateServerDialog.vue  EggManagerView.vue  FileEditor.vue  GuideButton.vue  GuideOverlay.vue  InstallerView.vue  MintMenu.vue  ModpackInstaller.vue  ModsView.vue  NodesView.vue  PluginSetupView.vue  PremadeServersView.vue  ServerManagementView.vue  ServersView.vue  SettingsModal.vue  SettingsView.vue  SplashScreen.vue  ToastNotification.vue  UpdateManager.vue
testsprite_tests/: standard_prd.json  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md  testsprite_frontend_test_plan.json
testsprite_tests/tmp/: code_summary.json  config.json  report_prompt.json
