[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
get_if_addrs = "0.5"
zip = "0.6"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
env_logger = "0.10"
once_cell = "1.18"
thiserror = "1.0"
ssh2 = "0.9.4"
tokio-util = { version = "0.7", features = ["codec"] }
byteorder = "1.5"
futures = "0.3"
anyhow = "1.0"
ureq = "2.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
