[package]
name = "servermint-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
sysinfo = { version = "0.30", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
url = "2.5"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
hostname = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] } 